@@ -16,7 +16,7 @@ static const u32   DGST_POS1      = 15;
 static const u32   DGST_POS2      = 6;
 static const u32   DGST_POS3      = 7;
 static const u32   DGST_SIZE      = DGST_SIZE_8_8;
-static const u32   HASH_CATEGORY  = HASH_CATEGORY_PASSWORD_MANAGER;
+static const u32   HASH_CATEGORY  = HASH_CATEGORY_CRYPTOCURRENCY_WALLET;
 static const char *HASH_NAME      = "BitShares v0.x - sha512(sha512_bin(pass))";
 static const u64   KERN_TYPE      = 21000;
 static const u32   OPTI_TYPE      = OPTI_TYPE_ZERO_BYTE
